docs: align README examples and refactor blank checks (#28)
- Added `.createDatabase(true)` to `JDBCKeyLockBuilder` in the main README's
  "Programmatic Usage" example to ensure accurate setup instructions aligned
  with sub-module documentation.
- Refactored `SimpleKeyLock.java` to use `String.isBlank()` instead of
  `trim().isEmpty()` for cleaner, standard string validation in Java.

Co-authored-by: google-labs-jules[bot] <161369871+google-labs-jules[bot]@users.noreply.github.com>
Co-authored-by: pmalirz <19637300+pmalirz@users.noreply.github.com>